@@ -1,4 +1,5 @@
 SUBDIRS = libltdl src include lib bindings drivers examples test utils
+
 bin_SCRIPTS = plplot_libtool
 
 plplot_libtool: libtool
